Add debt and bill categories support