@@ -1,7 +1,9 @@
 package br.com.everton.backendextrato.service;
 
 import br.com.everton.backendextrato.dto.DividaDto;
+import br.com.everton.backendextrato.model.CategoriaDivida;
 import br.com.everton.backendextrato.model.Divida;
+import br.com.everton.backendextrato.repository.CategoriaDividaRepository;
 import br.com.everton.backendextrato.repository.DividaRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -9,20 +11,22 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class DividaService {
 
     private final DividaRepository repository;
+    private final CategoriaDividaRepository categoriaRepository;
 
-    public DividaService(DividaRepository repository) {
+    public DividaService(DividaRepository repository, CategoriaDividaRepository categoriaRepository) {
         this.repository = repository;
+        this.categoriaRepository = categoriaRepository;
     }
 
     @Transactional
     public DividaDto salvar(String userEmail, DividaDto dto) {
         validar(dto);
+
         Divida entity;
         if (dto.id() != null) {
             entity = repository.findByIdAndUserEmailIgnoreCase(dto.id(), userEmail)
@@ -31,9 +35,12 @@ public class DividaService {
             entity = new Divida();
         }
 
-        entity.setDescricao(dto.descricao());
+        CategoriaDivida categoria = categoriaRepository.findByUserEmailIgnoreCaseAndNomeIgnoreCase(userEmail, dto.categoria().trim())
+                .orElseThrow(() -> new IllegalArgumentException("Categoria de dívida inválida para o usuário autenticado."));
+
+        entity.setDescricao(dto.descricao().trim());
         entity.setValor(dto.valor());
-        entity.setGrupo(dto.grupo());
+        entity.setCategoria(categoria);
         entity.setUserEmail(userEmail);
 
         Divida salvo = repository.save(entity);
@@ -44,13 +51,16 @@ public class DividaService {
     public List<DividaDto> listar(String userEmail) {
         return repository.findAllByUserEmailIgnoreCase(userEmail).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public boolean remover(String userEmail, Long id) {
         Optional<Divida> divida = repository.findByIdAndUserEmailIgnoreCase(id, userEmail);
-        if (divida.isEmpty()) return false;
+        if (divida.isEmpty()) {
+            return false;
+        }
+
         repository.delete(divida.get());
         return true;
     }
@@ -60,13 +70,25 @@ public class DividaService {
                 entity.getId(),
                 entity.getDescricao(),
                 entity.getValor(),
-                entity.getGrupo()
+                entity.getCategoria() != null ? entity.getCategoria().getNome() : "Sem categoria"
         );
     }
 
     private void validar(DividaDto dto) {
-        if (dto.descricao() == null || dto.descricao().isBlank()) throw new IllegalArgumentException("Descrição obrigatória");
-        if (dto.valor() == null || dto.valor().compareTo(BigDecimal.ZERO) < 0) throw new IllegalArgumentException("Valor inválido");
-        if (dto.grupo() == null || dto.grupo().isBlank()) throw new IllegalArgumentException("Grupo obrigatório");
+        if (dto == null) {
+            throw new IllegalArgumentException("Payload obrigatório.");
+        }
+
+        if (dto.descricao() == null || dto.descricao().isBlank()) {
+            throw new IllegalArgumentException("Descrição obrigatória");
+        }
+
+        if (dto.valor() == null || dto.valor().compareTo(BigDecimal.ZERO) < 0) {
+            throw new IllegalArgumentException("Valor inválido");
+        }
+
+        if (dto.categoria() == null || dto.categoria().isBlank()) {
+            throw new IllegalArgumentException("Categoria obrigatória");
+        }
     }
 }
